# find-man-page

./: CMakeLists.txt  README.md  main.cpp  man
src/: autocomplete-man-page.cpp  find-man-page.cpp  get_man_paths.cpp  load-man-page.cpp  lookup_context.cpp  main.cpp
